# solarreach-project1

./: .env.example  .gitignore  DEPLOY.md  Makefile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
infra/mongodb/: 01-users.js  02-collections.js  03-validators.js  04-indexes.js  05-agent-databases.js  05-search-indexes.md
scripts/: __init__.py  ingest_inspire.py  ingest_land_registry.py  match_leads_to_inspire.py  run_lead_agent.py  seed.py  seed_atlas_standalone.py  setup_atlas.py
tests/: test_agent_mongo_tools.py  test_agent_tools.py  test_compliance.py  test_discovery.py  test_financial.py  test_models.py  test_score.py
